2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.texi (Invoking Automake): Remove dead options.

	
2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_texinfo_file): Also compute the list of files
	to clean.
	Handle local errors.
	(&handle_texinfo): Use it.

	
2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in: Don't pass arguments to...
	(&parse_arguments): Work on @ARGV.
	Use Getopt.
	Add support for `-f'.
	(&version): New.
	(&usage): Update.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_merge_targets, &do_one_merge_target): Don't
	handle installcheck and installcheck-am.
	* install.am: Do it.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_merge_targets, &do_one_merge_target): Don't
	handle install and install-am.
	* install.am: Do it.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_merge_targets, &do_one_merge_target): Don't
	work on targets handled by %dependencies.
	(&handle_factored_dependencies): Do it.
	* install.am: Install install-exec, install-data and uninstall's
	suites.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_merge_targets): Move `install-strip' from
	here...
	* install.am: to here.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (@installdirs): Remove.
	(&file_contents): Be able to grow Automake macros with `+='.
	(&handle_texinfo, &handle_man_pages, &am_install_var): Let your
	files define _am_installdirs.
	(&handle_installdirs): Remove the code, just output `install.am'.
	* install.am: New.
	* data.am, header.am, libs.am, lisp.am, ltlib.am, mans.am, progs.am,
	* python.am, scripts.am, texinfos.am: Extend $(_am_installdirs).

2001-02-26  Akim Demaille  <akim@epita.fr>

	* tests/instdata2.test (libexec_DATA): Exercise more
	possibilities.

2001-02-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* header-vars.am (INSTALL_STRIP_FLAG): Remove (obsolete).

2001-02-25  Tom Tromey  <tromey@redhat.com>
