@@ -1,5 +1,12 @@
 2001-02-26  Akim Demaille  <akim@epita.fr>
 
+	* automake.in ($me): New.
+	Use it.
+	(&usage): Display your full name.
+
+	
+2001-02-26  Akim Demaille  <akim@epita.fr>
+
 	* automake.texi (Invoking Automake): Remove dead options.
 
 	
